feat: atualizar README e melhorar documentação
