# application/http/server.go
@@ -37,15 +37,15 @@ func RunServer(lr models.LiveStreamRepositoryInterface, ur models.UserRepository
 	users.POST("/signup", env.signup)
 	users.GET("/all", env.getAllUsers)
 	users.GET("/:id", authMiddleware(), env.getUserProfile)
-	users.DELETE("/delete/:user_id", authMiddleware(), env.deleteUser)
-	users.PATCH("/update/:user_id", authMiddleware(), env.updateUser)
+	users.DELETE("/delete/:id", authMiddleware(), env.deleteUser)
+	users.PATCH("/update/:id", authMiddleware(), env.updateUser)
 
 	streams := router.Group("/livestreams")
 	streams.POST("/create", authMiddleware(), env.createLiveStream)
-	streams.DELETE("/delete/:stream_id", authMiddleware(), env.deleteLiveStream)
-	streams.PATCH("/update/:stream_id", authMiddleware(), env.updateLiveStream)
+	streams.DELETE("/delete/:id", authMiddleware(), env.deleteLiveStream)
+	streams.PATCH("/update/:id", authMiddleware(), env.updateLiveStream)
 	streams.GET("/:user_id", authMiddleware(), env.getUserLiveStreams)
-	streams.GET("/info/:stream_id", authMiddleware(), env.getLiveStreamData)
+	streams.GET("/info/:id", authMiddleware(), env.getLiveStreamData)
 	streams.GET("/on_publish", env.validateStream)
 
 	router.Run(":" + os.Getenv("SERVER_PORT"))
